Update and rename portfolio.html to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="h">MY PORTFOLIO</h1>
     <nav>
-        <a  class=h href="portfolio.html">HOME</a>
+        <a  class=h href="index.html">HOME</a>
         <a  class=h href="about.html">ABOUT</a>
         <a class=h href="education.html">EDUCATION</a>
         <a class="h" href="contact.html">CONTACT</a>
@@ -30,4 +30,5 @@
     <footer> <p>&copy; 2025 ANUSREE K N | All Rights Reserved</p></footer>
 
 </body>
+
 </html>
