--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
      <nav>
-         <a  class=h href="portfolio.html">HOME</a>
+         <a  class=h href="index.html">HOME</a>
         <a  class=h href="about.html">ABOUT</a>
         <a class=h href="education.html">EDUCATION</a>
         <a class="h" href="contact.html">CONTACT</a>
@@ -27,4 +27,5 @@
     
     
 </body>
+
 </html>
