--- a/education.html
+++ b/education.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-       <a  class=h href="portfolio.html">HOME</a>
+       <a  class=h href="index.html">HOME</a>
         <a  class=h href="about.html">ABOUT</a>
         <a class=h href="education.html">EDUCATION</a>
        
@@ -39,4 +39,5 @@
   
     <footer> <p>&copy; 2025 ANUSREE K N | All Rights Reserved</p></footer>
 </body>
+
 </html>
