--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <div class="container" >
        
 <p class="h" >
-        <img src="../photo.jpeg" class="image">
+        <img src="./photo.jpeg" class="image">
     
     Hi! I'm an aspiring Web Developer and a second-year Computer Science student with a passion for building beautiful, responsive, and user-friendly websites. I'm currently diving deep into the world of HTML, CSS, and JavaScript, and I'm excited to keep learning new technologies like React, Node.js, and more. Even though I'm just starting my journey, I'm driven by curiosity, creativity, and the goal of turning ideas into interactive web experiences. I'm always exploring new projects, collaborating with others, and challenging myself to grow as a developer every day. When I'm not coding, you can find me experimenting with design tools, learning through online communities, or dreaming up my next big project.
 
@@ -29,3 +29,4 @@
 </body>
 
 </html>
+
